--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -59,7 +59,12 @@
 \begin{document}
 
 <% if (examples) { -%>
+
+<%= heading1 %>{LaTeX Hints}
+\label{chap:latexhints}
+
 <% if (useExampleEnvironment) { -%>
+% Required for proper example rendering in the compiled PDF
 \newcount\LTGbeginlineexample
 \newcount\LTGendlineexample
 \newenvironment{ltgexample}%
@@ -92,9 +97,6 @@
 }
 }%
 <% } -%>
-
-<%= heading1 %>{LaTeX Hints}
-\label{chap:latexhints}
 
 This <% if (heading1 == "\\chapter") {%>chapter<% } else { %>section<% } %> contains hints on writing LaTeX.
 It focuses on minimal examples, which can be directly adapted to the content
