Add custom example rendering (#9)

--- a/generators/app/templates/figure.example.en.tex
+++ b/generators/app/templates/figure.example.en.tex
@@ -1,14 +1,16 @@
 <%= heading2 %>{Figures}
 
+<%- bexample %>
+<% if (cleveref) { -%>
+\Cref{fig:label} shows something interesting.
+<% } else { -%>
+Figure~\ref{fig:label} shows something interesting.
+<% } -%>
+
 \begin{figure}
   \centering
   Place your figure here
   \caption{The example figure.}
   \label{fig:label}
 \end{figure}
-
-<% if (cleveref) { -%>
-\Cref{fig:label} <% } else { -%>
-Figure~\ref{fig:label}
-<% } -%>
-shows something interesting.
+<%- eexample %>
