--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -1,26 +1,77 @@
 <% if (latexcompiler == "lualatex") { -%>
 \usepackage[no-math]{fontspec}
-  <% if (font == "arial") { -%>
-\setmainfont{Arial}
-  <% } else if (font == "times") { -%>
-\setmainfont{TeXGyreTermes-Regular}[
-      BoldFont       = TeXGyreTermes-Bold ,
-      ItalicFont     = TeXGyreTermes-Italic ,
-      BoldItalicFont = TeXGyreTermes-BoldItalic,
-      NFSSFamily     = ntxtlf]
+\usepackage{unicode-math}
+<% if (font == "arial") { -%>
+\setmainfont[Ligatures=TeX]{Arial}
+\setsansfont[Ligatures=TeX]{Arial}
+% Use Inconsolata font (https://ctan.org/pkg/inconsolata)
+% See https://tex.stackexchange.com/q/2241/9075 for a list of other alternative mono-spaced fonts
+% No [Ligatures=TeX], because we want " rendered as upquotes, not as typographic correct ones
+\setmonofont{Inconsolatazi4}
+<% } else if (font == "times") { -%>
+% See https://tug.org/FontCatalogue/texgyretermes/ for more information
+\setmainfont{texgyretermes}[
+  Extension = .otf,
+  UprightFont = *-regular,
+  BoldFont = *-bold,
+  ItalicFont = *-italic,
+  BoldItalicFont = *-bolditalic,
+  Ligatures=TeX
+]
+% See https://tug.org/FontCatalogue/texgyreheros/ for more information
 \setsansfont[Scale=.9]{TeX Gyre Heros Regular}
 \setmonofont[StylisticSet={1,3},Scale=.9]{inconsolata}
 \RequirePackage{newtxmath}
-  <% } else { -%>
-  <% } -%>
+<% } else if (texlive === "tl2019") { -%>
+<%# no special configuration required for lualatex to use the LaTeX default font -%>
 <% } else { -%>
-  <% if (font == "arial") { -%>
-  <% } else { -%>
+% Source: https://tug.org/FontCatalogue/newcomputermoderntypewriter/
+
+\setmainfont[%
+ItalicFont=NewCM10-Italic.otf,%
+BoldFont=NewCM10-Bold.otf,%
+BoldItalicFont=NewCM10-BoldItalic.otf,%
+SmallCapsFeatures={Numbers=OldStyle}]{NewCM10-Regular.otf}
+
+\setsansfont[%
+ItalicFont=NewCMSans10-Oblique.otf,%
+BoldFont=NewCMSans10-Bold.otf,%
+BoldItalicFont=NewCMSans10-BoldOblique.otf,%
+SmallCapsFeatures={Numbers=OldStyle}]{NewCMSans10-Regular.otf}
+
+\setmonofont[ItalicFont=NewCMMono10-Italic.otf,%
+BoldFont=NewCMMono10-Bold.otf,%
+BoldItalicFont=NewCMMono10-BoldOblique.otf,%
+SmallCapsFeatures={Numbers=OldStyle}]{NewCMMono10-Regular.otf}
+
+\setmathfont{NewCMMath-Regular.otf}
+<% } -%>
+<% } else { -%>
+<%# pdflatex -%>
+<% if (font == "arial") { -%>
+% EN: Headings are typset in Helvetica (which is similar to Arial)
+% DE: Schriftart fuer die Ueberschriften - ueberschreibt lmodern
+\usepackage[scaled=.95]{helvet}
+<% } else if (font == "times") { -%>
 \RequirePackage{newtxtext}
 \RequirePackage{newtxmath}
+\RequirePackage[zerostyle=b,scaled=.9]{newtxtt}
 % EN: looks good with times, but no equivalent for lualatex found,
-%     therefore replaced with inconsolata
+%     therefore could/should replaced with inconsolata
 %\RequirePackage[zerostyle=b,scaled=.9]{newtxtt}
 \RequirePackage[varl,scaled=.9]{inconsolata}
-  <% } -%>
+<% } else { -%>
+% This is the modern package for "Computer Modern".
+% In case this gets activated, one has to switch from cmap package to glyphtounicode (in the case of pdflatex)
+\usepackage[%
+    rm={oldstyle=false,proportional=true},%
+    sf={oldstyle=false,proportional=true},%
+    % By using 'variable=true' the monospaced font can be used as variable font (with differents widths per letter)
+    % However, this makes listings look ugly.
+    tt={oldstyle=false,proportional=true,variable=false},%
+    qt=false%
+]{cfr-lm}
+<% } -%>
+% Has to be loaded AFTER any font packages. See https://tex.stackexchange.com/a/2869/9075.
+\usepackage[T1]{fontenc}
 <% } -%>
