Begin to work on LNCS

--- a/generators/app/templates/babel.preamble.de.tex
+++ b/generators/app/templates/babel.preamble.de.tex
@@ -5,7 +5,7 @@
 % Ermögliche die Benutzung von "= als Trennstriche
 \addto\extrasenglish{\languageshorthands{ngerman}\useshorthands{"}}
 
-<% if (documentclass === "lncs") { -%>
+<% if (documentclass == "lncs") { -%>
 % Fix von https://tex.stackexchange.com/a/441701/9075
 \usepackage{regexpatch}
 \makeatletter
