--- a/generators/app/templates/babel.preamble.en.tex
+++ b/generators/app/templates/babel.preamble.en.tex
@@ -7,7 +7,7 @@
 % Hint by http://tex.stackexchange.com/a/321066/9075 -> enable "= as dashes
 \addto\extrasenglish{\languageshorthands{ngerman}\useshorthands{"}}
 
-<% if (documentclass === "lncs") { -%>
+<% if (documentclass == "lncs") { -%>
 % Fix by https://tex.stackexchange.com/a/441701/9075
 \usepackage{regexpatch}
 \makeatletter
