--- a/generators/app/templates/listings.preamble.en.tex
+++ b/generators/app/templates/listings.preamble.en.tex
@@ -1,21 +1,44 @@
 % Code Listings
 \usepackage{listings}
-\lstset{language=XML,
+\lstset{
+  language=XML,
+  %
   showstringspaces=false,
+  %
   extendedchars=true,
+  %
   basicstyle=\footnotesize\ttfamily,
+  %
   commentstyle=\slshape,
+  %
   % default: \rmfamily
   stringstyle=\ttfamily,
+  %
   breaklines=true,
+  %
   breakatwhitespace=true,
+  %
   % alternative: fixed
   columns=flexible,
+  %
   numbers=left,
+  %
   numberstyle=\tiny,
+  %
   basewidth=.5em,
+  %
   xleftmargin=.5cm,
+  %
   % aboveskip=0mm,
+  %
   % belowskip=0mm,
+  %
   captionpos=b
 }
+<% if (documentclass == 'lncs') { -%>
+
+\renewcommand{\lstlistingname}{List.}
+% Fix counter as described at https://tex.stackexchange.com/a/28334/9075
+\usepackage{chngcntr}
+\AtBeginDocument{\counterwithout{lstlisting}{section}}
+<% } -%>
