--- a/generators/app/templates/paragraphs.example.de.tex
+++ b/generators/app/templates/paragraphs.example.de.tex
@@ -19,7 +19,7 @@ Beispielsweise begann der letzte Satz in einem neuen Absatz.
 Eine ausführliche Motivation hierfür findet sich in \url{http://loopspace.mathforge.org/HowDidIDoThat/TeX/VCS/#section.3}.
 <%- eexample %>
 
-<% if (documentclass === 'scientific-thesis') { -%>
+<% if (documentclass == 'scientific-thesis') { -%>
 Möchte man die Art des Absatzes ändern, so kann man die Dokumentklassenoption \texttt{parskip} verwenden.
 Beispielsweise kann man mit \texttt{parskip=off} erreichen, dass statt eines freien Bereichs die erste Zeile des Absatzes eingezogen wird.
 <% } -%>
