--- a/generators/app/templates/url.preamble.en.tex
+++ b/generators/app/templates/url.preamble.en.tex
@@ -2,12 +2,19 @@
 % Allow URL breaks also at a hyphen, even though it might be confusing: Is the "-" part of the address or just a hyphen?
 % See https://tex.stackexchange.com/a/3034/9075.
 \usepackage[hyphens]{url}
-%
+
 % When activated, use text font as url font, not the monospaced one.
 % For all options see https://tex.stackexchange.com/a/261435/9075.
 % \urlstyle{same}
-%
-% Hint by http://tex.stackexchange.com/a/10419/9075.
+
+% Improve wrapping of URLs - hint by http://tex.stackexchange.com/a/10419/9075
 \makeatletter
 \g@addto@macro{\UrlBreaks}{\UrlOrds}
 \makeatother
+
+% nicer // - solution by http://tex.stackexchange.com/a/98470/9075
+% DO NOT ACTIVATE -> prevents line breaks
+%\makeatletter
+%\def\Url@twoslashes{\mathchar`\/\@ifnextchar/{\kern-.2em}{}}
+%\g@addto@macro\UrlSpecials{\do\/{\Url@twoslashes}}
+%\makeatother
