--- a/generators/app/templates/listings.preamble.de.tex
+++ b/generators/app/templates/listings.preamble.de.tex
@@ -1,22 +1,38 @@
 % Code Listings
 \usepackage{listings}
-\lstset{language=XML,
+\lstset{
+  language=XML,
+  %
   showstringspaces=false,
+  %
   extendedchars=true,
+  %
   basicstyle=\footnotesize\ttfamily,
+  %
   commentstyle=\slshape,
+  %
   % Default: \rmfamily, damit werden die Strings im Quellcode hervorgehoben. Zusaetzlich evtl.: \scshape oder \rmfamily durch \ttfamily ersetzen. Dann sieht's aus, wie bei fancyvrb
   stringstyle=\ttfamily,
+  %
   breaklines=true,
+  %
   breakatwhitespace=true,
+  %
   % Alternative: fixed
   columns=flexible,
+  %
   numbers=left,
+  %
   numberstyle=\tiny,
+  %
   basewidth=.5em,
+  %
   xleftmargin=.5cm,
+  %
   % aboveskip=0mm,
+  %
   % belowskip=0mm,
+  %
   captionpos=b
 }
 
@@ -37,3 +53,17 @@
   {ű}{{\H{u}}}1 {Ű}{{\H{U}}}1 {ő}{{\H{o}}}1 {Ő}{{\H{O}}}1
   {ç}{{\c c}}1 {Ç}{{\c C}}1 {ø}{{\o}}1 {å}{{\r a}}1 {Å}{{\r A}}1
 }
+
+<% if (documentclass == 'lncs') { -%>
+\renewcommand{\lstlistingname}{List.}
+% Fix counter wie bei https://tex.stackexchange.com/a/28334/9075 beschrieben
+\usepackage{chngcntr}
+\AtBeginDocument{\counterwithout{lstlisting}{section}}
+<% } -%>
+
+<%
+% Compatibility of packages minted and listings with respect to the numbering of "List." caption
+% Source: https://tex.stackexchange.com/a/269510/9075
+\AtBeginEnvironment{listing}{\setcounter{listing}{\value{lstlisting}}}
+\AtEndEnvironment{listing}{\stepcounter{lstlisting}}
+%->
