--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -1,18 +1,45 @@
+<% if (documentclass == 'lncs') { -%>
+% This template has been tested with LLNCS DOCUMENT CLASS -- version 2.20 (10-Mar-2018)
+
+<% } -%>
 % !TeX spellcheck = en-US
 % !TeX encoding = utf8
 % !TeX program = <%= latexcompiler %>
+<% if (requiresShellEscape) { -%>
+% !TeX TXS-program:compile = txs:///<%= latexcompiler %>/[--shell-escape]
+<% } -%>
 % !BIB program = <%= bibtextool %>
 % -*- coding:utf-8 mod:LaTeX -*-
+<% if (documentclass == 'scientific-thesis') { -%>
 
-<% if (documentclass === 'scientific-thesis') { -%>
 % EN: The following package allows \\ at the title page
 %     For more information see https://github.com/latextemplates/scientific-thesis-cover/issues/4
 \RequirePackage{kvoptions-patch}
 <% } -%>
+<% if (documentclass == 'lncs') { -%>
 
+% "a4paper" enables:
+%  - easy print out on DIN A4 paper size
+%
+% One can configure a4 vs. letter in the LaTeX installation. So it is configuration dependend, what the paper size will be.
+% This option  present, because the current word template offered by Springer is DIN A4.
+% We accept that DIN A4 cause WTFs at persons not used to A4 in USA.
+
+% "runningheads" enables:
+%  - page number on page 2 onwards
+%  - title/authors on even/odd pages
+% This is good for other readers to enable proper archiving among other papers and pointing to
+% content. Even if the title page states the title, when printed and stored in a folder, when
+% blindly opening the folder, one could hit not the title page, but an arbitrary page. Therefore,
+% it is good to have title printed on the pages, too.
+%
+% It is enabled by default as the springer template as of 2018/03/10 uses this as default
+\documentclass[english,runningheads,a4paper]{llncs}[2018/03/10]
+<% } else {-%>
 \documentclass[
   % fontsize=11pt is the standard
   numbers=noenddot,
+  english,  % English as main language; this parameter is passed to other packages (e.g., selnolig in the case of lualatex)
   a4paper,  % Standard format - only KOMAScript uses paper=a4 - https://tex.stackexchange.com/a/61044/9075
   twoside,  % we are optimizing for both screen and two-side printing. So the page numbers will jump, but the content is configured to stay in the middle (by using the geometry package)
   bibliography=totoc,
@@ -24,6 +51,7 @@
   %               draft    % um zu sehen, wo noch nachgebessert werden muss - wichtig, da Bindungskorrektur mit drin
   draft=false
 ]{scrbook}
+<% } -%>
 
 <% if (latexcompiler == "pdflatex") { -%>
 % Enable copy and paste of text from the PDF
@@ -47,7 +75,18 @@
 <%- include('url.preamble.en.tex', this); %>
 <%- include('font.preamble.en.tex', this); %>
 <%- include('microtype.preamble.en.tex', this); %>
+\usepackage{graphicx}
+
+% backticks (`) are rendered as such in verbatim environment. See https://tex.stackexchange.com/a/341057/9075 for details.
+\usepackage{upquote}
+
+<% if (enquotes == 'csquotes')  { %><%- include('csquotes.preamble.en.tex', this); %><% } -%>
+<% if (enquotes == 'textcmds')  { %><%- include('textcmds.preamble.en.tex', this); %><% } -%>
+<%- include('url.preamble.en.tex', this); %>
+<%# Required for package pdfcomment later -%>
+\usepackage{xcolor}
 <%- include('listings.preamble.en.tex', this); %>
+<% if (todo == 'pdfcomment')  { %><%- include('pdfcomment.preamble.en.tex', this); %><% } -%>
 <%- include('hyperref.preamble.en.tex', this); %>
 <% if (cleveref) { %><%- include('cleveref.preamble.en.tex', this); %><% } -%>
 <% if (useExampleEnvironment) { -%>
@@ -55,8 +94,73 @@
 \usepackage{tcolorbox}
 \tcbuselibrary{listings}
 <% } -%>
+<% if (examples) { -%>
+
+% For demonstration purposes only
+% These packages can be removed when all examples have been deleted
+\usepackage[math]{blindtext}
+\usepackage{mwe}
+<% } -%>
+<% if (documentclass == 'lncs') { -%>
+
+% correct bad hyphenation here
+\hyphenation{op-tical net-works semi-conduc-tor}
+
+% Add copyright
+% Do that for the final version or if you send it to colleagues
+\iffalse
+  %state: intended|submitted|llncs
+  %you can add "crop" if the paper should be cropped to the format Springer is publishing
+  \usepackage[intended]{llncsconf}
+
+  \conference{name of the conference}
+
+  %in case of "llncs" (final version!)
+  %example: llncs{Anonymous et al. (eds). \emph{Proceedings of the International Conference on \LaTeX-Hacks}, LNCS~42. Some Publisher, 2016.}{0042}
+  \llncs{book editors and title}{0042} %% 0042 is the start page
+\fi
+<% } -%>
 
 \begin{document}
+<% if (documentclass == 'lncs') { -%>
+
+\title{Paper Title}
+%If Title is too long, use \titlerunning
+%\titlerunning{Short Title}
+
+%Single insitute
+\author{Firstname Lastname \and Firstname Lastname}
+%If there are too many authors, use \authorrunning
+%\authorrunning{First Author et al.}
+\institute{Institute}
+
+%% Multiple insitutes - ALTERNATIVE to the above
+% \author{%
+%     Firstname Lastname\inst{1} \and
+%     Firstname Lastname\inst{2}
+% }
+%
+%If there are too many authors, use \authorrunning
+%  \authorrunning{First Author et al.}
+%
+%  \institute{
+%      Insitute 1\\
+%      \email{...}\and
+%      Insitute 2\\
+%      \email{...}
+%}
+
+\maketitle
+
+\begin{abstract}
+  \lipsum[1]
+\end{abstract}
+
+\begin{keywords}
+  keyword1, keyword2
+\end{keywords}
+<% } -%>
+
 
 <% if (examples) { -%>
 
@@ -102,6 +206,10 @@ This <% if (heading1 == "\\chapter") {%>chapter<% } else { %>section<% } %> cont
 It focuses on minimal examples, which can be directly adapted to the content
 
 <%- include('paragraphs.example.en.tex', this); %>
+<%- include('hyphenation.example.en.tex', this); %>
+<% if (enquotes == 'csquotes')  { %><%- include('csquotes.example.en.tex', this); %><% } -%>
+<% if (enquotes == 'textcmds')  { %><%- include('textcmds.example.en.tex', this); %><% } -%>
+<% if (enquotes == 'plainlatex')  { %><%- include('plainlatex.enquotes.example.en.tex', this); %><% } -%>
 <%- include('figure.example.en.tex', this); %>
 <%- include('listings.example.en.tex', this); %>
 <% } -%>
