Correct group/cluster name

--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
 \centering
 \includegraphics[width=0.7\linewidth]{TUe-logo-descriptor-line-scarlet-L.png}\par
 Department of Mathematics and Computer Science\\
-Process Science Charter
+Process Analytics
 
 \vspace{3cm}
 {\LARGE\textbf{My Thesis Title}}\par\vspace{0.5cm}
