Use plain quotes for quoting

--- a/generators/app/templates/csquotes.example.de.tex
+++ b/generators/app/templates/csquotes.example.de.tex
@@ -2,8 +2,9 @@
 
 <%- bexample %>
 Bitte \enquote{enquote command} verwenden, um etwas in Anführungszeichen zu setzen.
-Das Feature "MakeOuterQuote" wurde auch aktivier, weshalb "einfache" Anführungszeichen auch genutzt werden können.
+Das Feature "MakeOuterQuote" wurde auch aktiviert, weshalb "einfache" Anführungszeichen auch genutzt werden können.
 Achtung! Dieses Feature ist weitgehend unbekannt, so dass man ab und an falsche Anführungszeichen in \LaTeX-Dokumenten sieht.
+Siehe \url{https://tex.stackexchange.com/a/150958/9075} für Details bezüglich dieser Lösung.
 
 Der Babel-Weg über \glqq{}Text\grqq{} geht weiterhin.
 <%- eexample %>
