--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -81,6 +81,15 @@
 \usepackage{tcolorbox}
 \tcbuselibrary{listings}
 <% } -%>
+<% if (examples) { -%>
+
+% For demonstration purposes only
+% These packages can be removed when all examples have been deleted
+\usepackage[math]{blindtext}
+\usepackage{mwe}
+% Required for hyphentation.example.en.tex
+\usepackage{textcomp}
+<% } -%>
 
 \begin{document}
 
