--- a/generators/app/templates/csquotes.preamble.en.tex
+++ b/generators/app/templates/csquotes.preamble.en.tex
@@ -1,6 +1,15 @@
 % For easy quotations: \enquote{text}
 % This package is very smart when nesting is applied, otherwise textcmds (see below) provides a shorter command
-\usepackage{csquotes}
+\usepackage[autostyle=true]{csquotes}
 
 % Enable "quote" - see https://tex.stackexchange.com/a/150958/9075
 \MakeOuterQuote{"}
+
+% Enable using "`quote"' - see https://tex.stackexchange.com/a/150954/9075
+\defineshorthand{"`}{\openautoquote}
+\defineshorthand{"'}{\closeautoquote}
+
+\makeatletter
+\newcommand{\diviswithhyphenation}{\penalty\@M-\hskip\z@skip}
+% Definition of "= taken from http://mirror.ctan.org/macros/latex/contrib/babel-contrib/german/ngermanb.dtx
+\makeatother
