--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -100,6 +100,8 @@
 % These packages can be removed when all examples have been deleted
 \usepackage[math]{blindtext}
 \usepackage{mwe}
+% Required for hyphentation.example.en.tex
+\usepackage{textcomp}
 <% } -%>
 <% if (documentclass == 'lncs') { -%>
 
