Add booktabs (and fix some typos in font...tex)

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -72,6 +72,7 @@
 <%# Required for package pdfcomment later -%>
 \usepackage{xcolor}
 <%- include('listings.preamble.de.tex', this); %>
+<%- include('booktabs.preamble.en.tex', this); %>
 <% if (todo == 'pdfcomment')  { %><%- include('pdfcomment.preamble.en.tex', this); %><% } -%>
 <%- include('hyperref.preamble.en.tex', this); %>
 <% if (cleveref) { %><%- include('cleveref.preamble.de.tex', this); %><% } -%>
@@ -135,10 +136,12 @@
 Hier sollen allgemeine \LaTeX-Hinweise gegeben werden, damit man Minimalbeispiele vorliegen hat, um sofort loszulegen.
 
 <%- include('paragraphs.example.de.tex', this); %>
+<%- include('hyphenation.example.en.tex', this); %>
 <% if (enquotes == 'csquotes')  { %><%- include('csquotes.example.en.tex', this); %><% } -%>
 <% if (enquotes == 'plainlatex')  { %><%- include('plainlatex.enquotes.example.de.tex', this); %><% } -%>
 <%- include('figure.example.de.tex', this); %>
 <%- include('listings.example.de.tex', this); %>
+<%- include('tables.example.en.tex', this); %>
 <% } -%>
 
 \end{document}
