--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -86,6 +86,7 @@
 <%# Required for package pdfcomment later -%>
 \usepackage{xcolor}
 <%- include('listings.preamble.en.tex', this); %>
+<%- include('booktabs.preamble.en.tex', this); %>
 <% if (todo == 'pdfcomment')  { %><%- include('pdfcomment.preamble.en.tex', this); %><% } -%>
 <%- include('hyperref.preamble.en.tex', this); %>
 <% if (cleveref) { %><%- include('cleveref.preamble.en.tex', this); %><% } -%>
@@ -100,8 +101,6 @@
 % These packages can be removed when all examples have been deleted
 \usepackage[math]{blindtext}
 \usepackage{mwe}
-% Required for hyphentation.example.en.tex
-\usepackage{textcomp}
 <% } -%>
 <% if (documentclass == 'lncs') { -%>
 
@@ -214,6 +213,7 @@ It focuses on minimal examples, which can be directly adapted to the content
 <% if (enquotes == 'plainlatex')  { %><%- include('plainlatex.enquotes.example.en.tex', this); %><% } -%>
 <%- include('figure.example.en.tex', this); %>
 <%- include('listings.example.en.tex', this); %>
+<%- include('tables.example.en.tex', this); %>
 <% } -%>
 
 \end{document}
