--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -38,16 +38,18 @@
 <%# \setmonofont{Latin Modern Mono Prop} % "variable=true" -%>
 <% } else { -%>
 % shapely l, upright quotes
-% If it is too large, add ",Scale=.9"
+% Normal scaling is too large --> thus, we use ",Scale=.9"
 \setmonofont[StylisticSet={1,3},Scale=.9]{Inconsolatazi4}
 <% } -%>
-<%# TODO: \RequirePackage{newtxmath} <-- why is this here? -%>
 <% } else if (texlive == "tl2019") { -%>
-<%# no special configuration required for lualatex to use the LaTeX default font -%>
+<%# no special configuration required for lualatex to use the LaTeX default font.
+  # See https://tex.stackexchange.com/a/423225/9075 for details
+-%>
 <% } else { -%>
 <%# -%>
 <%# Default LaTeX Font and LuaLaTeX -%>
 <%# -%>
+% Typewriter font (for source code etc)
 % Use New Computer Modern font (Computer Modern is the default LaTeX font; this is the implemented modern variant)
 % Source: https://tug.org/FontCatalogue/newcomputermoderntypewriter/
 
@@ -72,6 +74,7 @@ SmallCapsFeatures={Numbers=OldStyle}]{NewCMMono10-Regular.otf}
 <% } -%>
 % Enable proper ligatures
 % For more information see https://ctan.org/pkg/selnolig
+% language "english" or "ngerman" is passed to selnolig by the document class
 \usepackage{selnolig}
 <% } else { -%>
 <%# pdflatex -%>
