--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -73,6 +73,7 @@
 \usepackage{xcolor}
 <%- include('listings.preamble.de.tex', this); %>
 <%- include('booktabs.preamble.en.tex', this); %>
+<%- include('paralist.preamble.en.tex', this); %>
 <% if (todo == 'pdfcomment')  { %><%- include('pdfcomment.preamble.en.tex', this); %><% } -%>
 <%- include('hyperref.preamble.en.tex', this); %>
 <% if (cleveref) { %><%- include('cleveref.preamble.de.tex', this); %><% } -%>
@@ -139,6 +140,7 @@ Hier sollen allgemeine \LaTeX-Hinweise gegeben werden, damit man Minimalbeispiel
 <%- include('hyphenation.example.en.tex', this); %>
 <% if (enquotes == 'csquotes')  { %><%- include('csquotes.example.en.tex', this); %><% } -%>
 <% if (enquotes == 'plainlatex')  { %><%- include('plainlatex.enquotes.example.de.tex', this); %><% } -%>
+<%- include('paralist.example.en.tex', this); %>
 <%- include('figure.example.de.tex', this); %>
 <%- include('listings.example.de.tex', this); %>
 <%- include('tables.example.en.tex', this); %>
