--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -87,6 +87,7 @@
 \usepackage{xcolor}
 <%- include('listings.preamble.en.tex', this); %>
 <%- include('booktabs.preamble.en.tex', this); %>
+<%- include('paralist.preamble.en.tex', this); %>
 <% if (todo == 'pdfcomment')  { %><%- include('pdfcomment.preamble.en.tex', this); %><% } -%>
 <%- include('hyperref.preamble.en.tex', this); %>
 <% if (cleveref) { %><%- include('cleveref.preamble.en.tex', this); %><% } -%>
@@ -211,6 +212,7 @@ It focuses on minimal examples, which can be directly adapted to the content
 <% if (enquotes == 'csquotes')  { %><%- include('csquotes.example.en.tex', this); %><% } -%>
 <% if (enquotes == 'textcmds')  { %><%- include('textcmds.example.en.tex', this); %><% } -%>
 <% if (enquotes == 'plainlatex')  { %><%- include('plainlatex.enquotes.example.en.tex', this); %><% } -%>
+<%- include('paralist.example.en.tex', this); %>
 <%- include('figure.example.en.tex', this); %>
 <%- include('listings.example.en.tex', this); %>
 <%- include('tables.example.en.tex', this); %>
