--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -74,6 +74,7 @@
 <%- include('listings.preamble.de.tex', this); %>
 <%- include('booktabs.preamble.en.tex', this); %>
 <%- include('paralist.preamble.en.tex', this); %>
+<% if (documentclass == 'lncs')  { %><%- include('floatflt.preamble.en.tex', this); %><% } -%>
 <% if (todo == 'pdfcomment')  { %><%- include('pdfcomment.preamble.en.tex', this); %><% } -%>
 <%- include('hyperref.preamble.en.tex', this); %>
 <% if (cleveref) { %><%- include('cleveref.preamble.de.tex', this); %><% } -%>
