--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -64,11 +64,12 @@
 <%- include('microtype.preamble.de.tex', this); %>
 \usepackage{graphicx}
 
-% backticks (`) werden wie erwartet in verbatim-Umgebungen dargestellt. Siehe https://tex.stackexchange.com/a/341057/9075 für Details.
-\usepackage{upquote}
-
 <% if (enquotes == 'csquotes')  { %><%- include('csquotes.preamble.en.tex', this); %><% } -%>
-<%- include('url.preamble.en.tex', this); %>
+
+% Diagonal lines in a table - http://tex.stackexchange.com/questions/17745/diagonal-lines-in-table-cell
+% Slashbox is not available in texlive (due to licensing) and also gives bad results. This, we use diagbox
+%\usepackage{diagbox}
+
 <%# Required for package pdfcomment later -%>
 \usepackage{xcolor}
 <%- include('listings.preamble.de.tex', this); %>
