--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -77,12 +77,13 @@
 <%- include('microtype.preamble.en.tex', this); %>
 \usepackage{graphicx}
 
-% backticks (`) are rendered as such in verbatim environment. See https://tex.stackexchange.com/a/341057/9075 for details.
-\usepackage{upquote}
-
 <% if (enquotes == 'csquotes')  { %><%- include('csquotes.preamble.en.tex', this); %><% } -%>
 <% if (enquotes == 'textcmds')  { %><%- include('textcmds.preamble.en.tex', this); %><% } -%>
-<%- include('url.preamble.en.tex', this); %>
+
+% Diagonal lines in a table - http://tex.stackexchange.com/questions/17745/diagonal-lines-in-table-cell
+% Slashbox is not available in texlive (due to licensing) and also gives bad results. This, we use diagbox
+%\usepackage{diagbox}
+
 <%# Required for package pdfcomment later -%>
 \usepackage{xcolor}
 <%- include('listings.preamble.en.tex', this); %>
