--- a/generators/app/templates/hyperref.preamble.en.tex
+++ b/generators/app/templates/hyperref.preamble.en.tex
@@ -1,1 +1,13 @@
-% TODO: hyperref
+% Enable that parameters of \cref{}, \ref{}, \cite{}, ... are linked so that a reader can click on the number an jump to the target in the document
+\usepackage{hyperref}
+% Enable hyperref without colors and without bookmarks
+\hypersetup{
+  hidelinks,
+  colorlinks=true,
+  allcolors=black,
+  pdfstartview=Fit,
+  breaklinks=true
+}
+%
+% Enable correct jumping to figures when referencing
+\usepackage[all]{hypcap}
