Add JSON support and line example

--- a/generators/app/templates/listings.example.de.tex
+++ b/generators/app/templates/listings.example.de.tex
@@ -19,3 +19,17 @@ Listing~\ref{fig:label} zeigt XML-Quelltext.
 <%- eexample %>
 
 Der zusätzliche Paramter \verb+float+ führt dazu, dass das Listing auch floatet.
+
+One can also typeset JSON as shown in <% if (cleveref) { %>\cref<% } else { %>Listing~<% } %>{lst:flJSON}.
+
+<%- bexample %>
+\begin{lstlisting}[
+  float,
+  language=json,
+  caption={Example JSON Listing -- placed as floating figure},
+  label={lst:flJSN}]
+{
+  key: "value"
+}
+\end{lstlisting}
+<%- eexample %>
