--- a/generators/app/templates/listings.example.en.tex
+++ b/generators/app/templates/listings.example.en.tex
@@ -1,29 +1,22 @@
 <%= heading2 %>{Source Code}
 
 <%- bexample %>
-<% if (cleveref) { -%>
-\Cref{lst:XML} shows source code written in XML.
-<% } else { -%>
-Listing~\ref{lst:XML} shows source code written in XML.
-<% } -%>
+<% if (cleveref) { %>\Cref<% } else { %>Listing~\ref<% } %>{lst:XML} shows source code written in XML.
+<% if (cleveref) { %>\Cref<% } else { %>Line~\ref<% } %>{line:comment} contains a comment.
 
 \begin{lstlisting}[
   language=XML,
   caption={Example XML Listing},
   label={lst:XML}]
 <listing name="example">
-  <!-- comment -->
+  <!-- comment --> (* \label{line:comment} *)
   <content>not interesting</content>
 </listing>
 \end{lstlisting}
 <%- eexample %>
 
 One can also add \verb+float+ as paramter to have the listing floating.
-<% if (cleveref) { -%>
-\Cref{lst:flXML} shows the floating listing.
-<% } else { -%>
-Listing~\ref{lst:flXML} shows the floating listing.
-<% } -%>
+<% if (cleveref) { %>\Cref<% } else { %>Listing~\ref<% } %>{lst:flXML} shows the floating listing.
 
 <%- bexample %>
 \begin{lstlisting}[
@@ -34,5 +27,19 @@ Listing~\ref{lst:flXML} shows the floating listing.
 <listing name="example">
   Floating
 </listing>
+\end{lstlisting}
+<%- eexample %>
+
+One can also typeset JSON as shown in <% if (cleveref) { %>\cref<% } else { %>Listing~<% } %>{lst:flJSON}.
+
+<%- bexample %>
+\begin{lstlisting}[
+  float,
+  language=json,
+  caption={Example JSON Listing -- placed as floating figure},
+  label={lst:flJSON}]
+{
+  key: "value"
+}
 \end{lstlisting}
 <%- eexample %>
