--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -232,6 +232,7 @@
   title=Corresponding \LaTeX{} code of \texttt{\currfilepath},
   listing options={%
     language={[LaTeX]TeX},
+    escapeinside={},
     firstline=\the\LTGbeginlineexample,
     lastline=\the\LTGendlineexample,
     firstnumber=\the\LTGbeginlineexample,
