--- a/generators/app/templates/cleveref.preamble.de.tex
+++ b/generators/app/templates/cleveref.preamble.de.tex
@@ -21,7 +21,9 @@
 \Crefname{paragraph}{Abschnitt}{Abschnitte}
 \crefname{subparagraph}{Abschnitt}{Abschnitte}
 \Crefname{subparagraph}{Abschnitt}{Abschnitte}
+<% if (listings == 'minted') { -%>
 
 % Intermediate solution for hyperlinked refs. See https://tex.stackexchange.com/q/132420/9075 for more information.
 \newcommand{\llabel}[1]{\label[line]{#1}\hypertarget{#1}{}}
 \newcommand{\lref}[1]{\hyperlink{#1}{\FancyVerbLineautorefname~\ref*{#1}}}
+<% } -%>
