--- a/generators/app/templates/cleveref.preamble.en.tex
+++ b/generators/app/templates/cleveref.preamble.en.tex
@@ -10,7 +10,9 @@
 <% } -%>
 \crefname{listing}{Listing}{Listings}
 \Crefname{listing}{Listing}{Listings}
+<% if (listings == 'minted') { -%>
 
 % Intermediate solution for hyperlinked refs. See https://tex.stackexchange.com/q/132420/9075 for more information.
 \newcommand{\llabel}[1]{\label[line]{#1}\hypertarget{#1}{}}
 \newcommand{\lref}[1]{\hyperlink{#1}{\FancyVerbLineautorefname~\ref*{#1}}}
+<% } -%>
