Add tweak_outerquote (and minor fixes)

--- a/generators/app/templates/babel.preamble.de.tex
+++ b/generators/app/templates/babel.preamble.de.tex
@@ -1,9 +1,11 @@
 % Setze Deutsch als Sprache
 \usepackage[english,main=ngerman]{babel}
 
+<% if (tweak_outerquote == "babel")  { -%>
 % Hinweis von http://tex.stackexchange.com/a/321066/9075
 % Ermögliche die Benutzung von "= als Trennstriche
 \addto\extrasenglish{\languageshorthands{ngerman}\useshorthands{"}}
+<% } -%>
 
 <% if (documentclass == "lncs") { -%>
 % Fix von https://tex.stackexchange.com/a/441701/9075
