--- a/generators/app/templates/csquotes.example.en.tex
+++ b/generators/app/templates/csquotes.example.en.tex
@@ -2,6 +2,10 @@
 
 <%- bexample %>
 Please use the \enquote{enquote command} to quote something.
+Quoting with "`quote"' also works.
+
+<% if (tweak_outerquote == "outerquote")  { -%>
 The feature "MakeOuterQuote" is also enabled, which enables "plain" double quotes to correctly enquote.
 See \url{https://tex.stackexchange.com/a/150958/9075} for details on that solution.
+<% } -%>
 <%- eexample %>
