--- a/generators/app/templates/csquotes.preamble.en.tex
+++ b/generators/app/templates/csquotes.preamble.en.tex
@@ -2,8 +2,10 @@
 % This package is very smart when nesting is applied, otherwise textcmds (see below) provides a shorter command
 \usepackage[autostyle=true]{csquotes}
 
+<% if (tweak_outerquote == "outerquote")  { -%>
 % Enable "quote" - see https://tex.stackexchange.com/a/150958/9075
 \MakeOuterQuote{"}
+<% } -%>
 
 % Enable using "`quote"' - see https://tex.stackexchange.com/a/150954/9075
 \defineshorthand{"`}{\openautoquote}
