--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -113,7 +113,7 @@
 \fnbelowfloat
 
 <%- include('siunitx.preamble.en.tex'); %>
-<%- include('hyperref.preamble.en.tex', this); %>
+<%- include('hyperref.preamble.de.tex', this); %>
 <% if (cleveref) { %><%- include('cleveref.preamble.de.tex', this); %><% } -%>
 
 <% if (useExampleEnvironment) { -%>
