--- a/generators/app/templates/babel.preamble.en.tex
+++ b/generators/app/templates/babel.preamble.en.tex
@@ -4,8 +4,10 @@
 % english has to go last to set it as default language
 \usepackage[ngerman,main=english]{babel}
 
+<% if (tweak_outerquote == "babel")  { -%>
 % Hint by http://tex.stackexchange.com/a/321066/9075 -> enable "= as dashes
 \addto\extrasenglish{\languageshorthands{ngerman}\useshorthands{"}}
+<% } -%>
 
 <% if (documentclass == "lncs") { -%>
 % Fix by https://tex.stackexchange.com/a/441701/9075
