--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -13,8 +13,8 @@
 % For more information see https://github.com/latextemplates/scientific-thesis-cover/issues/4
 \RequirePackage{kvoptions-patch}
 <% } -%>
-
 <% if (latexcompiler !== 'lualatex') { -%>
+
 % Neue deutsche Trennmuster
 % Siehe http://www.ctan.org/pkg/dehyph-exptl und http://projekte.dante.de/Trennmuster/WebHome
 % Nur für pdflatex, nicht für lualatex
@@ -22,6 +22,9 @@
 <% } -%>
 
 <% if (documentclass == 'lncs') { -%>
+% "runningheads" zeigt Author + Titel auf jeder Seite.
+% Diese Option nach Aufforderung durch die Herausgeber entfernen.
+% Während des Schreibens und das Review des Papers hilft das, um z.B. auf konkrete Seitenzahlen einfach verweisen zu können.
 \documentclass[ngerman,runningheads,a4paper]{llncs}[2018/03/10]
 <% } else {-%>
 \documentclass[
