--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -19,22 +19,25 @@
 <% if (documentclass == 'lncs') { -%>
 
 % "a4paper" enables:
+%
 %  - easy print out on DIN A4 paper size
 %
 % One can configure a4 vs. letter in the LaTeX installation. So it is configuration dependend, what the paper size will be.
 % This option  present, because the current word template offered by Springer is DIN A4.
 % We accept that DIN A4 cause WTFs at persons not used to A4 in USA.
-
+%
 % "runningheads" enables:
+%
 %  - page number on page 2 onwards
 %  - title/authors on even/odd pages
+%
 % This is good for other readers to enable proper archiving among other papers and pointing to
 % content. Even if the title page states the title, when printed and stored in a folder, when
 % blindly opening the folder, one could hit not the title page, but an arbitrary page. Therefore,
 % it is good to have title printed on the pages, too.
 %
-% It is enabled by default as the springer template as of 2018/03/10 uses this as default
-\documentclass[english,runningheads,a4paper]{llncs}[2018/03/10]
+% To disable outputting page headers and footers, remove "runningheads"
+\documentclass[runningheads,a4paper,english]{llncs}[2018/03/10]
 <% } else {-%>
 \documentclass[
   % fontsize=11pt is the standard
@@ -253,6 +256,7 @@
   left=8mm,
   title=Corresponding \LaTeX{} code of \texttt{\currfilepath},
   listing options={%
+    frame=none,
     language={[LaTeX]TeX},
     escapeinside={},
     firstline=\the\LTGbeginlineexample,
