--- a/generators/app/templates/booktabs.preamble.en.tex
+++ b/generators/app/templates/booktabs.preamble.en.tex
@@ -1,2 +1,2 @@
-% Nicer tables (\toprule, \midrule, \bottomrule - see example)
+% Nicer tables (\toprule, \midrule, \bottomrule)
 \usepackage{booktabs}
