--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -204,6 +204,7 @@
   left=8mm,
   title=Zugehöriger \LaTeX{}-Quelltext aus \texttt{\currfilepath},
   listing options={%
+    frame=none,
     language={[LaTeX]TeX},
     firstline=\the\LTGbeginlineexample,
     lastline=\the\LTGendlineexample,
