Use check for tweak_outerquote also in hyphenation example; rename hyp. command to \hydash

--- a/generators/app/templates/csquotes.preamble.en.tex
+++ b/generators/app/templates/csquotes.preamble.en.tex
@@ -12,6 +12,6 @@
 \defineshorthand{"'}{\closeautoquote}
 
 \makeatletter
-\newcommand{\diviswithhyphenation}{\penalty\@M-\hskip\z@skip}
+\newcommand{\hydash}{\penalty\@M-\hskip\z@skip}
 % Definition of "= taken from http://mirror.ctan.org/macros/latex/contrib/babel-contrib/german/ngermanb.dtx
 \makeatother
