--- a/generators/app/templates/figure.example.en.tex
+++ b/generators/app/templates/figure.example.en.tex
@@ -15,14 +15,14 @@ Figure~\ref{fig:label} shows something interesting.
 \end{figure}
 <%- eexample %>
 <% if (documentclass == 'lncs') { -%>
-
+<%# enabled by the floatflt package %>
 One can also have pictures floating inside text:
 \clearpage
 
 <%- bexample %>
 \begin{floatingfigure}{.33\linewidth}
 \includegraphics[width=.29\linewidth]{example-image-a}
-\caption{Test}
+\caption{A floating figure}
 \end{floatingfigure}
 \blindtext[2]
 <%- eexample %>
