Create diagbox.*, floatflt.example.en.tex, small fixes

--- a/generators/app/templates/figure.example.de.tex
+++ b/generators/app/templates/figure.example.de.tex
@@ -14,3 +14,4 @@ Figure~\ref{fig:label} zeigt etwas Interessantes.
   \label{fig:label}
 \end{figure}
 <%- eexample %>
+<%- include('floatflt.example.en.tex', this); %>
