--- a/generators/app/templates/figure.example.en.tex
+++ b/generators/app/templates/figure.example.en.tex
@@ -14,16 +14,4 @@ Figure~\ref{fig:label} shows something interesting.
   \label{fig:label}
 \end{figure}
 <%- eexample %>
-<% if (documentclass == 'lncs') { -%>
-<%# enabled by the floatflt package %>
-One can also have pictures floating inside text:
-\clearpage
-
-<%- bexample %>
-\begin{floatingfigure}{.33\linewidth}
-\includegraphics[width=.29\linewidth]{example-image-a}
-\caption{A floating figure}
-\end{floatingfigure}
-\blindtext[2]
-<%- eexample %>
-<% } -%>
+<%- include('floatflt.example.en.tex', this); %>
