--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -65,12 +65,11 @@
 
 <% if (enquotes == 'csquotes')  { %><%- include('csquotes.preamble.en.tex', this); %><% } -%>
 
-% Diagonal lines in a table - http://tex.stackexchange.com/questions/17745/diagonal-lines-in-table-cell
-% Slashbox is not available in texlive (due to licensing) and also gives bad results. This, we use diagbox
-%\usepackage{diagbox}
+<%- include('diagbox.preamble.en.tex', this); %>
 
 <%# Required for package pdfcomment later -%>
 \usepackage{xcolor}
+
 <%- include('listings.preamble.de.tex', this); %>
 <%- include('booktabs.preamble.en.tex', this); %>
 <%- include('paralist.preamble.en.tex', this); %>
